Fix overlapping opacity style

--- a/src/components/FinalResult/FinalResult.css
+++ b/src/components/FinalResult/FinalResult.css
@@ -1,8 +1,8 @@
-.FinalResult--albums > img {
+.FinalResult--single-album {
     width: 100px;
     height: 100px;
 }
 
-.incorrect {
+.FinalResult--single-album.incorrect {
     opacity: 50%;
 }
